[gd_scene load_steps=15 format=2]

[ext_resource path="res://Juego/Meteoritos/MeteoritoSpawner.tscn" type="PackedScene" id=1]
[ext_resource path="res://Juego/Meteoritos/SectorMeteoritos.gd" type="Script" id=2]
[ext_resource path="res://Juego/Peligros/Advertencia.tscn" type="PackedScene" id=3]
[ext_resource path="res://Juego/Peligros/AdvertenciaSFX.tscn" type="PackedScene" id=4]

[sub_resource type="SegmentShape2D" id=1]
a = Vector2( -2.96881, 543.044 )
b = Vector2( -2.97736, -536.962 )

[sub_resource type="SegmentShape2D" id=2]
a = Vector2( -2.8775, 543.008 )
b = Vector2( -2.93994, -537.029 )

[sub_resource type="SegmentShape2D" id=3]
a = Vector2( 956.997, 3.12158 )
b = Vector2( -962.872, 3.12158 )

[sub_resource type="SegmentShape2D" id=4]
a = Vector2( 957.012, 3.01654 )
b = Vector2( -962.997, 2.96088 )

[sub_resource type="SegmentShape2D" id=5]
a = Vector2( 0.5, 900.297 )
b = Vector2( 0.5, -899.5 )

[sub_resource type="SegmentShape2D" id=6]
a = Vector2( -0.204346, 901 )
b = Vector2( 0.474976, -899.263 )

[sub_resource type="SegmentShape2D" id=7]
a = Vector2( 1399.88, 1 )
b = Vector2( -1399.51, 1 )

[sub_resource type="SegmentShape2D" id=8]
a = Vector2( 1399.8, 1 )
b = Vector2( -1399.78, 1 )

[sub_resource type="Animation" id=9]
resource_name = "advertencia"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Advertencia:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Advertencia:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AdvertenciaSFX:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AdvertenciaSFX:volume_db")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -10.196, 0.0 ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("SpawnTimer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ -1 ],
"method": "start"
} ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Advertencia:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AdvertenciaSFX:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="SectorMeteoritos" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ -899.783, 900.297, -2.3877 ],
"_edit_vertical_guides_": [ -1399.96, 1400.13 ]
}

[node name="BordesNavePlayer" type="Node2D" parent="."]
position = Vector2( 2.9967, -2.99658 )

[node name="BordeIzquierdo" type="StaticBody2D" parent="BordesNavePlayer"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BordesNavePlayer/BordeIzquierdo"]
position = Vector2( -960, 0 )
shape = SubResource( 1 )

[node name="BordeDerecho" type="StaticBody2D" parent="BordesNavePlayer"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BordesNavePlayer/BordeDerecho"]
position = Vector2( 960, 0 )
shape = SubResource( 2 )

[node name="BordeSuperior" type="StaticBody2D" parent="BordesNavePlayer"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BordesNavePlayer/BordeSuperior"]
position = Vector2( 0, -540 )
shape = SubResource( 3 )

[node name="BordeInferior" type="StaticBody2D" parent="BordesNavePlayer"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BordesNavePlayer/BordeInferior"]
position = Vector2( 0, 540 )
shape = SubResource( 4 )

[node name="DetectoresFueraZona" type="Node2D" parent="."]

[node name="DetectorIzquierdo" type="Area2D" parent="DetectoresFueraZona"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectoresFueraZona/DetectorIzquierdo"]
position = Vector2( -1400, 0 )
shape = SubResource( 5 )

[node name="DetectorDerecho" type="Area2D" parent="DetectoresFueraZona"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectoresFueraZona/DetectorDerecho"]
position = Vector2( 1400, 0 )
shape = SubResource( 6 )

[node name="DetectorSuperior" type="Area2D" parent="DetectoresFueraZona"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectoresFueraZona/DetectorSuperior"]
position = Vector2( 0, -900 )
shape = SubResource( 7 )

[node name="DetectorInferior" type="Area2D" parent="DetectoresFueraZona"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectoresFueraZona/DetectorInferior"]
position = Vector2( 0, 900 )
shape = SubResource( 8 )

[node name="Spawners" type="Node2D" parent="."]

[node name="SpawnCenIz" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -1150, 0 )
direccion = Vector2( 2, 0 )

[node name="SpawnCenDe" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 1150, 0 )
direccion = Vector2( 1, 0 )

[node name="SpawnCenSu" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 0, -720 )
direccion = Vector2( 1, 0 )

[node name="SpawnCenIn" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 0, 720 )
direccion = Vector2( 1, 0 )

[node name="SpawnSuIz" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -1152.83, -722.828 )
direccion = Vector2( 2, 1 )

[node name="SpawnSuDe" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 1150, -720 )
direccion = Vector2( -2, 1 )

[node name="SpawnInIz" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -1150, 720 )
direccion = Vector2( 2, -1 )

[node name="SpawnInDe" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 1150, 720 )
direccion = Vector2( -2, -1 )

[node name="SpawnSuSI" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -575, -720 )
direccion = Vector2( 2, 1 )

[node name="SpawnSuSD" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 575, -720 )
direccion = Vector2( -2, 1 )

[node name="SpawnIzID" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -1150, 375 )
direccion = Vector2( 2, -1 )

[node name="SpawnIzSD" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -1150, -375 )
direccion = Vector2( 2, 1 )

[node name="SpawnDeID" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 1150, 375 )
direccion = Vector2( -2, -1 )

[node name="SpawnDeSD" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 1138.69, -375 )
direccion = Vector2( -2, 1 )

[node name="SpawnInII" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -575, 720 )
direccion = Vector2( 2, -1 )

[node name="SpawnInID" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 575, 720 )
direccion = Vector2( -2, -1 )

[node name="SpawnTimer" type="Timer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Advertencia" parent="CanvasLayer" instance=ExtResource( 3 )]
visible = false

[node name="AdvertenciaSFX" parent="." instance=ExtResource( 4 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "advertencia"
anims/advertencia = SubResource( 9 )
anims/default = SubResource( 10 )

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]

[editable path="CanvasLayer/Advertencia"]
